# tfg-panaderia-duran

./: .dockerignore  .env.example  .gitignore  01-abr-changes.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  inventario_schema.sql  nginx.conf  pyproject.toml  requirements.txt  rxconfig.py  web.Dockerfile
assets/: styles.css
dev/: dev.py
dev/components/: __init__.py  alerta_card.py  form_producto.py  header.py  layout.py  modal_confirmacion.py  sidebar.py  stat_card.py  tabla_generica.py
dev/core/: bootstrap.py  config.py  database.py  exceptions.py  logging_config.py  security.py  seed_data.py  seed_demo.py
dev/models/: __init__.py  models.py  usuario.py
dev/pages/: alertas.py  configuracion.py  dashboard.py  demo_components.py  entradas.py  estadisticas.py  login.py  produccion_diaria.py  productos.py  proveedores.py  recetas.py  recovery_password.py  reportes.py  salidas.py
dev/repositories/: __init__.py  base_repository.py  entrada_repo.py  produccion_repo.py  producto_repo.py  proveedor_repo.py  receta_repo.py  salida_repo.py  usuario_repo.py
dev/services/: __init__.py  alerta_service.py  auth_service.py  export_service.py  inventario_service.py  produccion_service.py  producto_service.py  receta_service.py  reporte_service.py
dev/states/: auth_state.py  config_state.py  dashboard_state.py  entrada_salida_state.py  produccion_state.py  (+4 more)
docker/: Caddyfile  Dockerfile  compose.dokploy.yaml  compose.prod.yaml  compose.tools.yaml  compose.yaml
docs/: components.md  repositories.md  seed-data.md  services.md  states.md
tests/: conftest.py
(+19 files in other folders)
