[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reflex>=0.8.26",
    "passlib[argon2]==1.7.4",
    "bcrypt==4.0.0",
    "python-jose[cryptography]>=3.5.0",
    "openpyxl>=3.1.5",
    "reportlab>=4.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
